fix (assets/css/responsive.css): spacing from header

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -242,9 +242,6 @@
   .hero {
     padding: 2rem 2rem;
   }
-  .hero.hero-centered {
-    margin-top: 3rem;
-  }
   .header-inner {
     padding: 1rem 2rem;
   }
